[package]
name = "cmd20"
version = "0.8.0"
authors = ["tomowatt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "4.4.4"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = true
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = 3
